# opm-geochemistry

./: CMakeLists.txt  CMakeLists_files.cmake
cmake/Modules/: Fetchfmt.cmake
examples/: GeoChemX.cpp
flow/: flow_blackoil_geochemistry.cpp  flow_onephase_geochemistry.cpp
opm/simulators/geochemistry/: GeoChemIF.cpp  StandaloneSolvers.cpp  StandaloneSolvers.hpp
opm/simulators/geochemistry/Common/: Constants.hpp
opm/simulators/geochemistry/Core/: ChemBasVec.cpp  ChemGCSolver.cpp  ChemTable.cpp
opm/simulators/geochemistry/Thermo/: ThermoTable.cpp  ThermoTable.h  hkf.cpp  hkf.h
python/: CMakeLists.txt
python/package/: CMakeLists.txt
tests/tests_using_catch2/: CMakeLists.txt  test_thermo.cpp
tests/tests_using_catch2/RunGeoChem/: CMakeLists.txt
tests/tests_using_catch2/reference_results_eqsolver/: CMakeLists.txt
tests/tests_using_catch2/reference_results_eqsolver/EquilibriumTestCases/: CMakeLists.txt
